# SecondEngine

./: CMakeLists.txt
dependencies/include/glad/: glad.c  glad.h
src/: ID.txt  main.cpp
src/classes/: attributes.h  dynamicObject.cpp  dynamicObject.h  enemy.cpp  enemy.h  game.cpp  game.h  gameObject.h  grid.h  player.cpp  player.h  renderer.cpp  renderer.h  shader.cpp  shader.h  staticObject.cpp  staticObject.h  text.h
src/maps/: default.txt
src/shaders/: GIU.vs  GUI.fs  static.fs  static.vs
